# Qt_CMake_Template

./: .gitignore  CMakeLists.txt  Functions.cmake
